...
            ToolbarItem(placement: .primaryAction) {
                Button {
                    window.showSearch = true
                } label: {
                    Image(systemName: "magnifyingglass")
                }
                .accessibilityLabel("Search Pages")
            }
            ToolbarItem(placement: .primaryAction) {
                Button {
                    undoController?.undo()
                } label: {
                    Image(systemName: "arrow.uturn.backward")
...
